# SVGReader

./: .gitignore  CMakeLists.txt
includes/: svg.h  svg_parser.h  svg_parser_circle.h  svg_parser_desc.h  svg_parser_ellipse.h  svg_parser_group.h  svg_parser_line.h  svg_parser_path.h  svg_parser_polygon.h  svg_parser_polyline.h  svg_parser_rect.h  svg_parser_title.h  svg_xml.h
src/: autogenerated_colors.c  main.c  svg.c  svg_parser.c  svg_parser_circle.c  svg_parser_desc.c  svg_parser_ellipse.c  svg_parser_group.c  svg_parser_line.c  svg_parser_path.c  svg_parser_polygon.c  svg_parser_polyline.c  svg_parser_rect.c  svg_parser_title.c  svg_xml.c
